Include times in V1
