# swagger/v1-prerelease/swagger.yaml
@@ -26,6 +26,16 @@ paths:
             type: integer
             format: int32
             default: 10
+        - name: startTime
+          in: query
+          schema:
+            type: string
+            format: date-time
+        - name: endTime
+          in: query
+          schema:
+            type: string
+            format: date-time
         - name: includeMetadata
           in: query
           schema:
